# Harness

./: .gitignore  AGENTS.md  Dockerfile.harness-test  README.md  SECURITY.md  _test_slash.py  pyproject.toml  scratch_codex_edit.py
docs/: command_catalog.md  context_implementation.tex  operator_guide.md  session_tool_catalog.md  smoke_checklist.md
docs/plans/: agent_harness_master_plan.md  autonomous_chat_runtime_full_implementation_plan.md  autonomy_pr1_implementation_plan.md  backend_frontend_wiring_plan.md  backend_tui_wiring_plan.md  chat_cli_experience_plan.md  codex_like_live_run_experience_plan.md  context_management_plan.md  external_channel_adapters_decision_plan.md  model_provider_completion_execution_plan.md  model_provider_flawless_experience_plan.md  model_provider_registry_integration_plan.md  natural_language_operator_layer_plan.md  next_steps.md  openclaw_style_next_version_plan.md  opencode_experience_gap_plan.md  opencode_style_llm_chat_plan.md  release_ready_self_managed_actions_plan.md  security_layer_integration_plan.md  session_tool_gateway_plan.md  toloclaw_governance_parity_plan.md  v0_1_hardening_plan.md  v0_2_0_plan.md  v0_3_5_control_plane_stabilization_plan.md  v0_3_task_queue_hardening_plan.md  v0_4_5_minimal_execution_adapter_decision_plan.md  v0_4_local_daemon_plan.md  v0_5_1_read_only_adapter_hardening_plan.md  v0_5_read_only_execution_adapter_plan.md  v0_6_2_agent_group_inheritance_plan.md  v0_6_3_agent_structure_mvp_plan.md  v0_6_quant_workbench_plan.md  v0_7_1_agent_authoring_hardening_plan.md  v0_7_agent_authoring_mvp_plan.md  v1_1_cli_ux_plan.md  (+10 more)
harness/: approvals.py  codex_edit_runner.py  config.py  edit_runner.py  models.py  protocol.py  test_runner.py
tests/: conftest.py  test_action_proposals.py  test_agent_authoring_v0_7.py  test_agent_contracts.py  test_agent_discovery.py  test_agent_handoff.py  test_approvals.py  test_autonomy.py  test_backend_streaming.py  test_capabilities_v1_8.py  test_chat_model.py  test_chat_tools.py  test_cli_smoke.py  test_codex_apply_back_c3.py  test_codex_backend.py  test_codex_code_edit_c2.py  test_codex_runner_phase_1c.py  test_config.py  test_context_budget.py  test_context_chunks.py  test_context_cli.py  test_context_compression.py  test_context_pack.py  test_context_policy.py  test_context_retrieval.py  test_context_vector.py  test_core_projection.py  test_core_service.py  test_cross_provider_handoff.py  test_docker_image_manager_phase_4.py  test_docker_sandbox_phase_3a.py  test_docker_tests_cli_phase_3a.py  test_docs_phase_3d.py  test_edit_runner_phase_2a.py  test_effective_policy_v0_3_5.py  test_evals_traces_v0_3_5.py  test_event_broker.py  test_event_store.py  test_external_protocols.py  test_foreground_core_routing.py  (+65 more)
tools/: generate_tui_pixel_art.py
(+185 files in other folders)
