[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness"
version = "1.5.0"
description = "Local-first agent harness with durable queue and control-plane evidence"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Agent Harness Contributors" }]
keywords = ["agent", "cli", "local-first", "automation", "evidence"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "textual>=0.86",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]
tui = []

[project.scripts]
harness = "harness.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"harness.memory" = ["schema.sql"]
"harness" = [
  "builtin_specs/*.yaml",
  "builtin_specs/agents/**/*.yaml",
  "builtin_specs/agents/*/*.yaml",
  "builtin_specs/agents/*/*/*.yaml",
  "builtin_specs/workbenches/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
